# norvel-writer

./: .env.example  .gitattributes  .gitignore  README.md  llm.ini.example  pyproject.toml  run.bat
.claude/: settings.local.json
packaging/: build_windows.bat  norvel_writer.spec
src/norvel_writer/: __init__.py  __main__.py  app.py
src/norvel_writer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/norvel_writer/api/: app.py
src/norvel_writer/config/: defaults.py  migrations.py  settings.py
src/norvel_writer/core/: diff_engine.py  draft_engine.py  export_engine.py  project.py  role_loader.py  style_profile.py
src/norvel_writer/ingestion/: base.py  docx_ingestor.py  image_ingestor.py  json_ingestor.py  md_ingestor.py  odt_ingestor.py  pdf_ingestor.py  pipeline.py  txt_ingestor.py
src/norvel_writer/llm/: anthropic_client.py  embedder.py  gemini_client.py  langchain_bridge.py  model_manager.py  ollama_client.py  openai_assistant.py  openai_client.py  prompt_builder.py  providers.py
src/norvel_writer/resources/prompts/: continue_draft.j2  extract_style.j2  rewrite_passage.j2  summarise_chapter.j2
src/norvel_writer/storage/: db.py  vector_store.py
src/norvel_writer/ui/: main_window.py  theme.py
src/norvel_writer/utils/: async_worker.py  chunker.py  chunker.test.py  logging_config.py  pal_zhaolinger.md  text_utils.py
src/norvel_writer/web/: index.html
tests/: conftest.py
tests/unit/: test_chunker.py  test_diff_engine.py  test_ingestors.py  test_repositories.py  test_settings_dialog.py
(+25 files in other folders)
