[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "norvel-writer"
version = "0.1.0"
description = "Local writing assistant powered by LangChain (Ollama, OpenAI, Anthropic, Gemini)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "python-multipart>=0.0.9",
    "aiofiles>=23",
    "httpx>=0.27",
    "langchain-core>=0.2,<1",
    "langchain-text-splitters>=0.3,<1",
    "langchain-ollama>=0.2,<1",
    "langchain-openai>=0.1,<1",
    "langchain-anthropic>=0.1,<1",
    "langchain-google-genai>=1.0,<3",
    "python-dotenv>=1.0,<2",
    "chromadb>=0.5,<0.6",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-docx>=1.1,<2",
    "odfpy>=1.4,<2",
    "pdfplumber>=0.11,<0.12",
    "nltk>=3.8,<4",
    "langdetect>=1.0,<2",
    "Jinja2>=3.1,<4",
    "platformdirs>=4.2,<5",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0,<2",
    "edge-tts>=6.1,<7",
]

[project.scripts]
norvel-writer = "norvel_writer.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "black>=24",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
norvel_writer = ["resources/**/*", "web/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
